# sqlmesh_jaffle_shop

./: .gitignore  README.md  config.yaml  poetry.toml  pyproject.toml
models/business/: customers.sql  orders.sql
models/raw/: raw_customers.sql  raw_orders.sql  raw_payments.sql
models/staging/: stg_customers.sql  stg_orders.sql  stg_payments.sql
seeds/: raw_customers.csv  raw_orders.csv  raw_payments.csv
